# recommendation-system

./: .gitignore  README.md  eda.ipynb  pyproject.toml  requirements.txt
api/: main.py  schema.py
configs/: config.yaml
data/: preprocess.py
data/processed/: bucket_edges.npz  item_id_map.json  user_id_map.json
evaluation/: evaluate.py  metrics.py
evaluation/results/: evaluation_results.json
faiss_index/: build_index.py  search.py
ranking/: dataset.py  deepfm_model.py  train_ranker.py
retrieval/: dataset.py  export_embeddings.py  train_two_tower.py  two_tower.py
scripts/: inference_pipeline.py  train_pipeline.py
