[project]
name = "ecommerce-rec-system"
version = "1.0.0"
description = "E-commerce Recommendation System - Two-Tower + FAISS + DeepFM (Retailrocket dataset)"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "torch>=2.2.0",
    "pandas>=2.0.0",
    "numpy<2",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "faiss-cpu==1.8.0",
    "duckdb>=1.5.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.25.0"]
dev = ["ipykernel", "matplotlib>=3.10.8", "seaborn", "jupyter", "pytest", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "retrieval", "ranking", "faiss_index", "api", "evaluation", "scripts"]
